--- a/src/app/components/default-login-layout/default-login-layout.component.html
+++ b/src/app/components/default-login-layout/default-login-layout.component.html
@@ -1,14 +1,16 @@
 <main>
-    <section>
+    <section class="form-section">
         <img src="/assets/svg/logo.svg"/>
-        <h2></h2>
-        <button></button>
-        <div>
-            <span>or</span>
+        <h2>{{title}}</h2>
+        <div class="btn-wrapper">
+            <button class="btn-primary">{{primaryBtnText}}</button>
+            <div>
+                <span>or</span>
+            </div>
+            <button class="btn-secundary">{{secundaryBtnText}}</button>
         </div>
-        <button></button>
     </section>
-    <section>
+    <section class="main-section">
         <h1>You should, Movelt!</h1>
         <img src="/assets/svg/main-ilustration.svg"/>
     </section>
